# python_case

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/rename_py/: cli.py  naming.py  rename.py  transformer.py
src/snake_shift/: __init__.py  cli.py  core.py  file_operations.py  module_detection.py  naming.py  rename.py  transformer.py
tests/: expected_example.py  test_cli_improvements.py  test_error_handling.py  test_gitignore.py  test_pascal_case.py  test_rename.py  test_underscore_edge_cases.py
tests/example_code/: example.py  expected_example.py
