[project]
name = "snake-shift"
version = "1.0.0"
description = "smart codebase refactor camelCase to pythonic_case"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["libcst>=1.8.2", "pytest>=8.4.1", "typer>=0.16.1", "rich>=13.0.0"]

[project.scripts]
snake-shift = "snake_shift.cli:app"
