[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snake-shift"
version = "1.0.2"
description = "Smart codebase refactor from camelCase to pythonic snake_case"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Simon Walker", email = "simon@simonwalker.tech" }]
keywords = [
  "refactoring",
  "camelcase",
  "snake-case",
  "python",
  "code-formatting",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",
]
dependencies = ["libcst>=1.8.2", "typer>=0.16.1", "rich>=13.0.0"]

[project.urls]
Homepage = "https://github.com/simondoesstuff/snake_shift"
Repository = "https://github.com/simondoesstuff/snake_shift"
Issues = "https://github.com/simondoesstuff/snake_shift/issues"

[project.scripts]
snake-shift = "snake_shift.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/snake_shift"]

[dependency-groups]
dev = ["build>=1.3.0", "pytest>=8.4.1", "twine>=6.1.0"]
